<resources>
    <string name="app_name">Geeft</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_publish_warning">Non verrà pubblicato nulla senza il tuo consenso.</string>
    <string name="facebook_app_id">1537015443283612</string>
    <string name="toast_fb_login_canc">Login con Facebook annullato</string>
    <string name="toast_google_login_canc">Login con Google annullato</string>
    <string name="toast_fb_login_err">Non è stato possibile effettuare il login con Facebook, riprova più tardi</string>
    <string name="toast_google_login_err">Non è stato possibile effettuare il login con Google, riprova più tardi</string>
    <string name="skip">skip</string>
    <string name="server_client_id">248994882321-p44e336af9tsmpk9p63p83ftbptum44o.apps.googleusercontent.com</string>
    <string name="user_name">Name and Surname</string>
    <string name="action_settings">Disconnetti</string>
    <string name="description">Prova</string>
    <string name="action_navigate">Next</string>
    <string name="action_compose">Compose</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_title">Benvenuto</string>
    <string name="navigation_drawer_description">Benvenuto nel menù di Geeft.
        Scegli un\'opzione nella lista oppure
        clicca fuori dal menù per tornare alla home.
    </string>
    <string name="account_title">Il mio profilo</string>
    <string name="gift_title">Geeft che hai regalato</string>
    <string name="recycle_title">Geeft che hai ricevuto</string>
    <string name="categories_title">Categorie</string>
    <string name="settings_title">Impostazioni</string>
    <string name="mail_title">Contattaci</string>
    <string name="account_description">Visualizza il tuo profilo</string>
    <string name="gift_description">Visualizza gli oggetti che hai regalato</string>
    <string name="settings_description">Modifica le tue impostazioni</string>
    <string name="mail_description">Contattaci per qualsiasi cosa</string>
    <string name="recycle_description">Visualizza gli oggetti che hai ricevuto</string>
    <string name="categories_description">Cerca Geeft per categoria</string>
    <string name="add_gift_name_hint" translatable="true">Scrivi il nome del tuo Geeft</string>
    <string name="add_geeft_description_hint" translatable="true">Scrivi una breve descrizione</string>
    <string name="logout_dialog_message">Sei sicuro di volerti disconnettere</string>
    <string name="logout_dialog_title">Disconessione</string>
    <string name="action_feedback">Segnala/Consiglia</string>
    <string name="action_guide">Guida</string>
    <string name="feedback_page_message">Se ci sono state delle anomalie, malfunzionamenti,
        difficoltà di utilizzo o desideri dare opinioni/consigli sull\'applicazione,
        compila i seguenti campi con un breve titolo del problema/consiglio ed una descrizione di esso
        (se stai segnalando un problema, specifica in che situazione e come è avvenuto ).</string>
    <string name="team_thanks_string">Grazie da parte del team di Geeft</string>
    <string name="feedback_communication_question">Com\'è stata la comunicazione?</string>
    <string name="feedback_reliability_question">È stata una persona affidabile?</string>
    <string name="feedback_courtesy_question">È stata cortese?</string>
    <string name="feedback_description_question">Il Geeft era descritto bene?</string>
    <string name="feedback_insert_comment">Scrivi un commento.</string>
    <string name="feedback_button">Invia</string>
    <string name="cheese_ipsum">llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllsjnjsnajininiunainaiunuononoinasoin</string>
    <string name="more">Altro</string>
    <string-array name="cities_array">
        <item>Agrigento</item>
        <item>Alessandria</item>
        <item>Ancona</item>
        <item>Aosta</item>
        <item>Arezzo</item>
        <item>Ascoli Piceno</item>
        <item>Asti</item>
        <item>Avellino</item>
        <item>Bari</item>
        <item>Belluno</item>
        <item>Benevento</item>
        <item>Bergamo</item>
        <item>Biella</item>
        <item>Bologna</item>
        <item>Bolzano</item>
        <item>Brescia</item>
        <item>Brindisi</item>
        <item>Cagliari</item>
        <item>Caltanissetta</item>
        <item>Campobasso</item>
        <item>Caserta</item>
        <item>Catania</item>
        <item>Catanzaro</item>
        <item>Chieti</item>
        <item>Como</item>
        <item>Cosenza</item>
        <item>Cremona</item>
        <item>Crotone</item>
        <item>Cuneo</item>
        <item>Enna</item>
        <item>Ferrara</item>
        <item>Firenze</item>
        <item>Foggia</item>
        <item>Forlì-Cesena</item>
        <item>Frosinone</item>
        <item>Genova</item>
        <item>Gorizia</item>
        <item>Grosseto</item>
        <item>Imperia</item>
        <item>Isernia</item>
        <item>La Spezia</item>
        <item>L\'Aquila</item>
        <item>Latina</item>
        <item>Lecce</item>
        <item>Lecco</item>
        <item>Livorno</item>
        <item>Lodi</item>
        <item>Lucca</item>
        <item>Macerata</item>
        <item>Mantova</item>
        <item>Massa-Carrara</item>
        <item>Matera</item>
        <item>Messina</item>
        <item>Milano</item>
        <item>Modena</item>
        <item>Napoli</item>
        <item>Novara</item>
        <item>Nuoro</item>
        <item>Oristano</item>
        <item>Padova</item>
        <item>Palermo</item>
        <item>Parma</item>
        <item>Pavia</item>
        <item>Perugia</item>
        <item>Pesaro e Urbino</item>
        <item>Pescara</item>
        <item>Piacenza</item>
        <item>Pisa</item>
        <item>Pistoia</item>
        <item>Pordenone</item>
        <item>Potenza</item>
        <item>Prato</item>
        <item>Ragusa</item>
        <item>Ravenna</item>
        <item>Reggio Calabria</item>
        <item>Reggio Emilia</item>
        <item>Rieti</item>
        <item>Rimini</item>
        <item>Roma</item>
        <item>Rovigo</item>
        <item>Salerno</item>
        <item>Sassari</item>
        <item>Savona</item>
        <item>Siena</item>
        <item>Siracusa</item>
        <item>Sondrio</item>
        <item>Taranto</item>
        <item>Teramo</item>
        <item>Terni</item>
        <item>Torino</item>
        <item>Trapani</item>
        <item>Trento</item>
        <item>Treviso</item>
        <item>Trieste</item>
        <item>Udine</item>
        <item>Varese</item>
        <item>Venezia</item>
        <item>Verbano-Cusio-Ossola</item>
        <item>Vercelli</item>
        <item>Verona</item>
        <item>Vibo Valentia</item>
        <item>Vicenza</item>
        <item>Viterbo</item>
    </string-array>
    <string-array name="week_array">
        <item>---Seleziona scadenza---</item>
        <item>1 giorno</item>
        <item>2 giorni</item>
        <item>3 giorni</item>
        <item>4 giorni</item>
        <item>5 giorni</item>
        <item>6 giorni</item>
        <item>7 giorni</item>
        <item>8 giorni</item>
        <item>9 giorni</item>
        <item>10 giorni</item>
        <item>11 giorni</item>
        <item>12 giorni</item>
        <item>13 giorni</item>
        <item>14 giorni</item>
    </string-array>
    <string-array name="categories_array">
        <item>---Seleziona Categoria---</item>
        <item>Abbigliamento e accessori</item>
        <item>Casa e giardino</item>
        <item>Elettronica</item>
        <item>Film, Libri e Musica</item>
        <item>Infanzia e Bambini</item>
        <item>Sport, Tempo Libero e Giochi</item>
        <item>Auto e Motori</item>
        <item>Servizi</item>
        <item>Altro</item>
    </string-array>
    <string name="categories_cloth_text">Abbigliamento e accessori</string>
    <string name="categories_house_text">Casa e giardino</string>
    <string name="categories_electronics_text">Elettronica</string>
    <string name="categories_media_text">Film, Libri e Musica</string>
    <string name="categories_kids_text">Infanzia e Bambini</string>
    <string name="categories_sports_text">Sport, Tempo Libero e Giochi</string>
    <string name="categories_motor_text">Auto e Motori</string>
    <string name="categories_services_text">Servizi</string>
    <string name="categories_other_text">Altro</string>
    <string name="allow_communication_string">Posso essere contattato</string>
    <string name="automatic_selection_text">Selezione automatica del Geefted</string>
    <string name="geeft_dimension_text">È ingombrante? [cm]</string>
    <string name="geeft_height_text">Altezza</string>
    <string name="geeft_width_text">Lunghezza</string>
    <string name="geeft_depth_text">Profondità</string>
    <string name="pref_header_general">Generale</string>
    <string name="pref_title_social_recommendations">Posso essere contattato</string>
    <string name="pref_description_social_recommendations">Permette di specificare l\'operazione di default
        ovvero se l\'utente vuole essere contattato oppure no.\nNota: Questa opzione è visualizzata di default quando si aggiunge un Geeft,ma può essere modificata
        manualmente. </string>
    <string name="pref_title_display_name">Username</string>
    <string name="pref_default_display_name"></string>
    <string name="pref_title_add_friends_to_messages">Permetti chat interna</string>
    <string-array name="pref_example_list_titles">
        <item>Sempre</item>
        <item>Solo a chi assegno gli oggetti</item>
        <item>Mai</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Dati &amp; sincronizzazione</string>
    <string name="pref_title_sync_frequency">Frequenza di aggiornamento Geeft</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minuti</item>
        <item>30 minuti</item>
        <item>1 ora</item>
        <item>3 ore</item>
        <item>6 ore</item>
        <item>Mai</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">Impostazioni di sincronizzazione di sistema</string>
    <string name="username_mail_instructions">Per favore compilare i seguenti campi:</string>
    <string name="username_textview">Nickname:</string>
    <string name="mail_textview">Email:</string>
    <string name="username_button">Avanti</string>
    <string name="no_valid_mail_toast">L\'email non è valida.</string>
    <string name="no_valid_username_toast">Il nickname non può essere vuoto.</string>
    <string name="nickname_default">Geeft User</string>
    <string name="DonatedActivity_title">Lista geeft regalati</string>
</resources>