<?xml version="1.0" encoding="utf-8"?>
<menu
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"/>
    <item
        android:id="@+id/action_guide"
        android:orderInCategory="100"
        android:title="@string/action_guide"/>
    <!--TODO Prova: si deve cancelare Feedback Geefted/Geefter.-->
    <item
        android:id="@+id/action_feedback_geefted"
        android:orderInCategory="100"
        android:title="feedback geefted"/>
    <item
        android:id="@+id/action_feedback_geefter"
        android:orderInCategory="100"
        android:title="feedback geefter"/>

</menu>