<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:text="@string/feedback_communication_question"
        xmlns:android="http://schemas.android.com/apk/res/android"/>
    <RatingBar
    android:id="@+id/ratingBarCommunication"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:numStars="5"
    android:stepSize="1.0"
    android:rating="1.0"
    android:scaleX="0.7"
    android:scaleY="0.7"
        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/colorPrimaryText"
    android:padding="@dimen/activity_horizontal_margin"
    android:textStyle="bold"
    android:text="@string/feedback_reliability_question"
        />
    <RatingBar
    android:id="@+id/ratingBarReliability"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:numStars="5"
    android:stepSize="1.0"
    android:rating="1.0"
    android:scaleX="0.7"
    android:scaleY="0.7"
        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/colorPrimaryText"
    android:padding="@dimen/activity_horizontal_margin"
    android:textStyle="bold"
    android:text="@string/feedback_courtesy_question"
        />
    <RatingBar
    android:id="@+id/ratingBarCourtesy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:numStars="5"
    android:stepSize="1.0"
    android:rating="1.0"
    android:scaleX="0.7"
    android:scaleY="0.7"
        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="@color/colorPrimaryText"
    android:padding="@dimen/activity_horizontal_margin"
    android:textStyle="bold"
    android:text="@string/feedback_description_question"
        />
    <RatingBar
    android:id="@+id/ratingBarDescription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:numStars="5"
    android:stepSize="1.0"
    android:rating="1.0"
    android:scaleX="0.7"
    android:scaleY="0.7"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="horizontal">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="#00ffffff"
        android:src="@drawable/ic_edit_black_24dp"/>
    <EditText
        android:id="@+id/fragment_feedback_help_page_description"
        android:textColor="@color/colorPrimaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:hint="@string/feedback_insert_comment"
        android:textColorHint="@color/colorHintAccent"
        />
    </LinearLayout>
    <Button
    android:id="@+id/feedback_submit_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_gravity="center"
    android:text="@string/feedback_button"
    android:background="@android:color/holo_green_dark"
    android:textColor="@color/white"
    android:textSize="16sp"
        />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:textColor="@android:color/darker_gray"
    android:textAlignment="viewEnd"
    android:layout_gravity="end"
    android:paddingRight="@dimen/activity_horizontal_margin_x2"
    android:paddingEnd="@dimen/activity_horizontal_margin_x2"
    android:text="@string/team_thanks_string"
        />
</LinearLayout>