<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <include android:id="@+id/toolbar"
             layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/username_mail_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username_mail_instructions"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryText"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/username_textview"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            />

        <EditText
            android:id="@+id/username_edittext"
            android:gravity="center"
            android:hint="Inserire username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/colorPrimaryText"
            />

        <TextView
            android:id="@+id/user_email_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_textview"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="Inserire indirizzo e-mail"
            android:textColor="@color/colorPrimaryText"
            />
        <Button
            android:id="@+id/username_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00ffffff"
            android:text="@string/username_button"
            android:textColor="@color/colorAccent"
            android:layout_gravity="end"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>