<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/fragment_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >

        <include android:id="@+id/toolbar" layout="@layout/tool_bar"/>


    </android.support.design.widget.AppBarLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
            android:text="@string/feedback_communication_question"
        />
    <RatingBar
        android:id="@+id/ratingBarCommunication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="1.0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:text="@string/feedback_reliability_question"
        />
    <RatingBar
        android:id="@+id/ratingBarReliability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="1.0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:text="@string/feedback_courtesy_question"
        />
    <RatingBar
        android:id="@+id/ratingBarCourtesy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="1.0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        />
    <TextView
        android:id="@+id/text_view_feedback_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:text="@string/feedback_description_question"
        />
    <RatingBar
        android:id="@+id/ratingBarDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="1.0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:background="#00ffffff"
                    android:src="@drawable/ic_edit_black_24dp"/>
                <EditText
                    android:id="@+id/fragment_feedback_help_page_description"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:hint="@string/feedback_insert_comment"
                    android:textColorHint="@color/colorHintAccent"
                    />
        </LinearLayout>
        <Button
            android:id="@+id/feedback_submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:background="#00ffffff"
            android:textColor="#F57C00"
            android:text="@string/feedback_button"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:paddingTop="@dimen/activity_vertical_margin_x2"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/team_thanks_string"
        />

</LinearLayout>
</ScrollView>