<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".MainActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/fragment_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >
        <include android:id="@+id/toolbar" layout="@layout/tool_bar"/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username_mail_instructions"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryText"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/username_textview"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            />
        <EditText
            android:id="@+id/username_edittext"
            android:gravity="center"
            android:hint="Geeft User"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            />
        <TextView
            android:id="@+id/email_text_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_textview"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="user@geeftapp.com"
            android:textColor="@color/colorPrimaryText"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/username_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/username_button"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
